<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_product_information"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.inventoryapp.ProductInformation">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

        <ImageView
            android:id="@+id/product_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/product_image_content_description"
            android:padding="20dp"
            tools:src="@drawable/ic_photo_camera_black_24dp"/>

        <LinearLayout
            android:id="@+id/product_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/product_image"
            android:layout_toRightOf="@+id/product_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/product_information_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="#2B3D4D"
                tools:text="Name"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price_tag"/>

                <TextView
                    android:id="@+id/product_information_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Price"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales_tag"/>

                <TextView
                    android:id="@+id/product_information_sales"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text=" Sales"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/product_information_supplier_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Supplier"/>

        <Button
            android:id="@+id/product_information_order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_button"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/product_information_actions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_tag"/>

        <TextView
            android:id="@+id/product_information_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text=" Quantity"/>
    </LinearLayout>

    <Button
        android:id="@+id/product_information_update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/update_button"/>

    <LinearLayout
        android:id="@+id/product_information_updates_view"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_received"/>

        <EditText
            android:id="@+id/product_information_shipment_received"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/items_sold"/>

        <EditText
            android:id="@+id/product_information_items_sold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/quantity_hint"
            android:inputType="number"/>
    </LinearLayout>
</LinearLayout>
