<?xml version="1.0" encoding="utf-8"?>
<!-- Layout for a single list item in the list of products -->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:descendantFocusability="blocksDescendants"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/inventory_list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Name"
            android:fontFamily="sans-serif-medium"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"  />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price_tag"
                android:fontFamily="sans-serif"
                android:textColor="#AEB6BD"  />

            <TextView
                android:id="@+id/inventory_list_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Price"
                android:fontFamily="sans-serif"
                android:textColor="#AEB6BD"  />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity_tag"
                android:fontFamily="sans-serif"
                android:textColor="#AEB6BD"  />

            <TextView
                android:id="@+id/inventory_list_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Quantity"
                android:fontFamily="sans-serif"
                android:textColor="#AEB6BD"  />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:id="@+id/sell_product"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/button_circle_sale"
        android:textColor="@color/colorWhiteText"
        android:text="@string/sale_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sell_product"
        android:layout_toLeftOf="@+id/sales_record"
        android:text="@string/sales_tag"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sales_record"
        android:layout_below="@+id/sell_product"
        android:gravity="center_horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        tools:text=" 0"
        />
</RelativeLayout>